force-app/main/default/objects/public_xm_user__x/public_xm_user__x.object-meta.xml
<CustomObject>
    <description>public$xm_user</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>public$xm_user</externalName>
    <label>public$xm_user</label>
    <pluralLabel>public$xm_user</pluralLabel>
</CustomObject>