force-app/main/default/objects/public_xm_user__x/fields/is_active__c.field-meta.xml
<CustomField>
    <fullName>is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is_active</description>
    <externalDeveloperName>is_active</externalDeveloperName>
    <label>is_active</label>
    <type>Checkbox</type>
</CustomField>