force-app/main/default/objects/public_xm_user__x/fields/is_logged_externally__c.field-meta.xml
<CustomField>
    <fullName>is_logged_externally__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is_logged_externally</description>
    <externalDeveloperName>is_logged_externally</externalDeveloperName>
    <label>is_logged_externally</label>
    <type>Checkbox</type>
</CustomField>