force-app/main/default/objects/public_xm_user__x/fields/last_login__c.field-meta.xml
<CustomField>
    <fullName>last_login__c</fullName>
    <description>last_login</description>
    <externalDeveloperName>last_login</externalDeveloperName>
    <label>last_login</label>
    <type>DateTime</type>
</CustomField>