force-app/main/default/objects/public_xm_user__x/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <description>name</description>
    <externalDeveloperName>name</externalDeveloperName>
    <label>name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>