force-app/main/default/objects/public_xm_user__x/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <description>password</description>
    <externalDeveloperName>password</externalDeveloperName>
    <label>password</label>
    <length>80</length>
    <type>Text</type>
</CustomField>