force-app/main/default/objects/public_xm_user__x/fields/role_code__c.field-meta.xml
<CustomField>
    <fullName>role_code__c</fullName>
    <description>role_code</description>
    <externalDeveloperName>role_code</externalDeveloperName>
    <label>role_code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>