force-app/main/default/objects/public_xm_user__x/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <description>user_id</description>
    <externalDeveloperName>user_id</externalDeveloperName>
    <label>user_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>