force-app/main/default/objects/public_xm_user__x/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <description>username</description>
    <externalDeveloperName>username</externalDeveloperName>
    <label>username</label>
    <length>30</length>
    <type>Text</type>
</CustomField>